# modelmeter

./: .clippy.toml  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/examples/: read_db.rs  test_delete.rs
crates/core/src/: config.rs  crud.rs  lib.rs  logging.rs  secrets.rs
crates/core/src/db/: migrations.rs  mod.rs  schema.rs
crates/core/src/providers/: anthropic.rs  claude_code.rs  elevenlabs.rs  mod.rs  openai.rs  xai.rs
crates/core/src/sync/: mod.rs
crates/core/tests/: elevenlabs_live.rs  provider_integration.rs  xai_live.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: claude_code.rs  elevenlabs.rs  mod.rs  providers.rs  queries.rs  settings.rs  sync.rs  xai.rs
src/__tests__/: GeneralSettings.test.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TitleBar.tsx  Toolbar.tsx
src/components/ui/: DailyBars.tsx  Money.tsx  SyncIndicator.tsx
src/lib/: tauri.ts  theme.ts  time.ts  types.ts
src/pages/: Dashboard.tsx  Providers.tsx  Settings.tsx
src/pages/settings/: GeneralSettings.tsx
src/styles/: tokens.css
