[package]
name = "modelmeter-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
keyring.workspace = true
toml.workspace = true
dirs.workspace = true
chrono.workspace = true
zeroize.workspace = true
getrandom.workspace = true

# On non-Windows, Perl (available via Xcode/system) is used to vendor-compile OpenSSL
[target.'cfg(not(windows))'.dependencies]
rusqlite = { workspace = true, features = ["bundled-sqlcipher-vendored-openssl"] }

[dev-dependencies]
tokio = { workspace = true }
wiremock.workspace = true
